# Metadata-Adoption-Quantify

./: README.md  pyproject.toml
msr2025_data/repositories/: github_links_envri.json  github_links_panosc.json  github_links_rsd.json
msr2025_data/somef_output_0.9.11/output_envri/: output_1.json  output_10.json  output_100.json  output_101.json  output_102.json  output_103.json  output_104.json  output_105.json  output_106.json  output_107.json  output_108.json  output_109.json  output_11.json  output_110.json  output_111.json  output_112.json  output_113.json  output_114.json  output_115.json  output_116.json  output_117.json  output_118.json  output_119.json  output_12.json  output_120.json  output_121.json  output_122.json  output_123.json  output_124.json  output_125.json  output_126.json  output_127.json  output_128.json  output_129.json  output_13.json  output_130.json  output_131.json  output_132.json  output_133.json  output_134.json  (+472 more)
msr2025_data/somef_output_0.9.11/output_escape/: output_1.json  output_11.json  output_12.json  output_14.json  output_15.json  output_16.json  output_17.json  output_18.json  output_19.json  output_20.json  output_3.json  output_4.json  output_5.json  output_6.json  output_7.json  output_8.json  output_9.json
msr2025_data/somef_output_0.9.11/output_panosc/: output_1.json  output_10.json  output_11.json  output_12.json  output_13.json  output_14.json  output_16.json  output_17.json  output_19.json  output_2.json  output_20.json  output_21.json  output_22.json  output_23.json  (+7 more)
src/quantify/: cli.py  count_results.py  run_somef.py
(+9548 files in other folders)
