[project]
name = "metadata-adoption-quantify"
version = "2.0.0"
description = "This software extracts relevant data from SOMEF (Software Metadata Extraction Framework) results to answer specific research questions. The extracted insights are returned as structured JSON files, allowing easy integration and analysis."
authors = [
    {name = "Anas-Elhounsri",email = "elhounsri.anas@gmail.com"}
]
license = {text = "Apache-2.0 license"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests (>=2.30.0,<3.0.0)",
    "somef (>=0.9.0)"
]git

[tool.poetry]
packages = [
    { include = "quantify", from = "src" }
]

[tool.poetry.scripts]
quantify = "quantify.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
